hymn 1 and 2 made + fixes to CSS

--- a/rgveda.html
+++ b/rgveda.html
@@ -3,24 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <title>rigveda</title>
-    <link rel="stylesheet" href="css/rgveda.css"> 
+    <link rel="stylesheet" href="rgveda.css"> 
     <link rel="icon" type="image/png" href="../media/icon.png">
 </head>
 <body>
+        <!-- Title -->
+        <h1> R </h1>
     <hr>
     <div>
+        <!-- BOOK 1 HYMN 1-->
         <h2>Book 1, Hymn 1</h2>
-        <p>agním īḷe puróhitaṃ yájnasya devám r̥tvíjam |</p>
-        <p>I praise Agni, the chosen priest, God, minister of sacrifice, The hotar, lavishest of wealth.</p>
-        <hr>
+            <p>
+                agním īḻe puróhitam yajñásya devám ṛtvíjam । <br>
+                hótāram ratnadhā́tamam ॥ <br>
+            </p>
+            <p>
+                agníḥ pū́rvebhir ṛ́ṣibhir ī́́dyo nū́tanair utá । <br>
+                sá devā́m* éhá vakṣati ॥ <br>
+            </p>
+            <p>
+                agnínā rayím aśnavat póṣam evá divé-dive । <br>
+                yaśásam vīrávattamam ॥ <br>
+            </p>
+            <p>
+                ágne yáṃ yajñám adhvaráṃ viśvátaḥ paribhū́r ási । <br>
+               sá íd́ devéṣu gachati ॥ <br>
+            </p>
+            <p>
+                agnír hótā kavíkratuḥ satyáś citráśravastamaḥ । <br>
+                devó devébhir ā́ gamat ॥ <br>
+            </p>
+            <p>
+                yád aṅgá dāśúṣe tvám ágne bhadráṃ kariṣyási । <br>
+                távét tát satyám angiraḥ ॥ <br>
+            </p>
+            <p>
+                úpa tvāgne divé-dive dóṣāvastar dhiyā́ vayám । <br>
+                námo bháranta émasi ॥ <br>
+            </p>
+            <p>
+                rā́jantam adhvaráṇāṃ gopā́m ṛtásya dī́divim । <br>
+                várdhamānam své dáme ॥ <br>
+            </p>
+            <p>
+                sá naḥ pitéva sūnávé ’gne sūpāyanó bhava  <br>
+                sácasvā nah svastáye ॥ <br>
+            </p>
+    <hr>
+
+        <!-- BOOK 1 HYMN 2-->
         <h2>Book 1, Hymn 2</h2>
-        <p>váyuṃ váyav īḷe |</p>
-        <p>I praise Vayu, the lord of winds.</p>
-        <hr>
-        <h2>Book 1, Hymn 3</h2>
-        <p>áśvinā devarājaṃ námasyaṃ kṣetrāya bíbhr̥táṃ purá |</p>
-        <p> I praise the Ashvins, royal gods worthy of honor, bearing the chariot.</p>
-        <hr>
+            <p>
+                vā́yav ā́ yāhi darśatemé sómā aráṃkṛtāḥ । <br>
+                téṣām pāhi śrudhī́ hávam ॥ <br>
+            </p>
+            <p>
+                vā́yo ukthébhir jaranté tvā́m áchā jaritā́raḥ । <br>
+                sutásomā aharvídaḥ ॥ <br>
+            </p>
+            <p>
+                vā́yo táva prapr̥ñchatī́ dhénā jigāti dāśúṣe । <br>
+                urūcī́ somapītaye ॥ <br>
+            </p>
+            <p>
+                índravāyū imé sutā́ úpa práyobhir ā́ gatam । <br>
+                índavo vām úśanti hí ॥ <br>
+            </p>
+            <p>
+                vā́yav índraś ca cetathaḥ sutā́nāṃ vājinīvasū । <br>
+                tā́v ā́ yātam úpa dravát ॥ <br>
+            </p>
+            <p>
+                vā́yav índraś ca sunvatā ā́ yātam úpa niskṛtám । <br>
+                makṣv ìtthā́ dhiyā́ narā ॥ <br>
+            </p>
+            <p>
+                mitráṃ huve pūtádakṣaṃ váruṇaṃ ca riśā́dasam । <br>
+                dhíyaṃ ghr̥tā́cīm sā́dántā ॥ <br>
+            </p>
+            <p>
+                ṛténa mitrāvaruṇāv ṛtāvr̥dhāv ṛtaspr̥śā । <br>
+                krátum br̥hántaṃ āśāthe ॥ <br>
+            </p>
+            <p>
+                kavī́ no mitrā́varuṇā tuvijātā́ urukṣáyā । <br>
+                dákṣaṃ dadhāte apásaṃ ॥ <br>
+            </p>
+        
+    <hr>
+            <!-- BOOK 1 HYMN 2-->
+            <h2>Book 1, Hymn 3</h2>
+            <p>
+                áśvinā devarājaṃ námasyaṃ kṣetrāya bíbhr̥táṃ purá |
+            </p>
+    <hr>
     </div>
 </body>
 </html>
