--- a/rgveda.html
+++ b/rgveda.html
@@ -8,7 +8,8 @@
 </head>
 <body>
         <!-- Title -->
-        <h1> R </h1>
+        <h1 class="heading"> Ṛgveda </h1>
+        <p> by loka </p>
     <hr>
     <div>
         <!-- BOOK 1 HYMN 1-->
