--- a/rgveda.html
+++ b/rgveda.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>rigveda</title>
+    <title>ṛgveda</title>
     <link rel="stylesheet" href="rgveda.css"> 
-    <link rel="icon" type="image/png" href="../media/icon.png">
+    <link rel="icon" type="image/png" href="media/swastika.png">
 </head>
 <body>
         <!-- Title -->
         <h1 class="heading"> Ṛgveda </h1>
-        <p> by loka </p>
+        <p class="subtitle"> by loka </p>
     <hr>
     <div>
         <!-- BOOK 1 HYMN 1-->
@@ -19,8 +19,8 @@
                 hótāram ratnadhā́tamam ॥ <br>
             </p>
             <p>
-                agníḥ pū́rvebhir ṛ́ṣibhir ī́́dyo nū́tanair utá । <br>
-                sá devā́m* éhá vakṣati ॥ <br>
+                agníḥ pū́rvebhir ṛ́ṣibhir ī́́diyo nū́tanair utá । <br>
+                sá devā́m̐ éhá vakṣati ॥ <br>
             </p>
             <p>
                 agnínā rayím aśnavat póṣam evá divé-dive । <br>
@@ -55,48 +55,94 @@
         <!-- BOOK 1 HYMN 2-->
         <h2>Book 1, Hymn 2</h2>
             <p>
-                vā́yav ā́ yāhi darśatemé sómā aráṃkṛtāḥ । <br>
+                vā́yav ā́ yāhi darśata imé sómā áraṃkr̥tāḥ । <br>
                 téṣām pāhi śrudhī́ hávam ॥ <br>
             </p>
             <p>
-                vā́yo ukthébhir jaranté tvā́m áchā jaritā́raḥ । <br>
-                sutásomā aharvídaḥ ॥ <br>
+                vā́ya ukthébhir jarante tuvā́m áchā jaritā́raḥ । <br>
+                sutásomā aharvídaḥ ॥ <br>
             </p>
             <p>
-                vā́yo táva prapr̥ñchatī́ dhénā jigāti dāśúṣe । <br>
-                urūcī́ somapītaye ॥ <br>
+                vā́yo táva prapr̥ñcatī́ dhénā jigāti dāśúṣe । <br>
+                urūcī́ sómapītaye ॥ <br>
             </p>
             <p>
-                índravāyū imé sutā́ úpa práyobhir ā́ gatam । <br>
-                índavo vām úśanti hí ॥ <br>
+                índravāyū imé sutā úpa práyobhir ā́ gatam । <br>
+                índavo vām uśánti hí ॥ <br>
             </p>
             <p>
                 vā́yav índraś ca cetathaḥ sutā́nāṃ vājinīvasū । <br>
                 tā́v ā́ yātam úpa dravát ॥ <br>
             </p>
             <p>
-                vā́yav índraś ca sunvatā ā́ yātam úpa niskṛtám । <br>
-                makṣv ìtthā́ dhiyā́ narā ॥ <br>
+                vā́yav índraś ca sunvatá ā́ yātam úpa niṣkr̥tám । <br>
+                makṣú itthā́ dhiyā́ narā ॥ <br>
             </p>
             <p>
                 mitráṃ huve pūtádakṣaṃ váruṇaṃ ca riśā́dasam । <br>
-                dhíyaṃ ghr̥tā́cīm sā́dántā ॥ <br>
+                dhíyaṃ ghr̥tā́cīṃ sā́dhantā ॥ <br>
             </p>
             <p>
-                ṛténa mitrāvaruṇāv ṛtāvr̥dhāv ṛtaspr̥śā । <br>
-                krátum br̥hántaṃ āśāthe ॥ <br>
+                r̥téna mitrāvaruṇāv r̥tāvr̥dhāv r̥taspr̥śā । <br>
+                krátum br̥hántam āśathe ॥ <br>
             </p>
             <p>
-                kavī́ no mitrā́varuṇā tuvijātā́ urukṣáyā । <br>
-                dákṣaṃ dadhāte apásaṃ ॥ <br>
+                kavī́ no mitrā́váruṇā tuvijātā́ urukṣáyā । <br>
+                dákṣaṃ dadhāte apásam ॥ <br>
             </p>
         
     <hr>
             <!-- BOOK 1 HYMN 2-->
             <h2>Book 1, Hymn 3</h2>
             <p>
-                áśvinā devarājaṃ námasyaṃ kṣetrāya bíbhr̥táṃ purá |
+                áśvinā yájvarīr íṣo drávatpāṇī śúbhas patī । <br>
+                púrubhujā canasyátam ॥ <br>
             </p>
+            <p>
+                áśvinā púrudaṃsasā nárā śávīrayā dhiyā́ । <br>
+                dhíṣṇiyā vánataṃ gíraḥ ॥ <br>
+            </p>
+            <p>
+                dásrā yuvā́kavaḥ sutā́ nā́satyā vr̥ktábarhiṣaḥ । <br>
+                ā́ yātaṃ rudravartanī ॥ <br>
+            </p>
+            <p>
+                índrā́ yāhi citrabhāno sutā́ imé tuvāyávaḥ । <br>
+                áṇvībhis tánā pūtā́saḥ ॥ <br>
+            </p>
+            <p>
+                índrā́ yāhi dhiyéṣitó víprajūtaḥ sutā́vataḥ । <br>
+                úpa bráhmāṇi vāghátaḥ ॥ <br>
+            </p>
+            <p>
+                índrā́ yāhi tū́tujāna úpa bráhmāṇi harivaḥ । <br>
+                suté dadhiṣva naś cánaḥ ॥ <br>
+            </p>
+            <p>
+                ómāsaś carṣaṇīdhr̥to víśve devāsa ā́ gata । <br>
+                dāśvā́ṃso dāśúṣaḥ sutám ॥ <br>
+            </p>
+            <p>
+                víśve devā́so aptúraḥ sutám ā́ ganta tū́rṇayaḥ । <br>
+                usrā́ iva svásarāṇi ॥ <br>
+            </p>
+            <p>
+                víśve devā́so asrídha éhimāyāso adrúhaḥ । <br>
+                médhaṃ juṣanta váhnayaḥ ॥ <br>
+            </p>
+            <p>
+                pavākā́ naḥ sárasvatī vā́jebhir vājínīvatī । <br>
+                yajñáṃ vaṣṭu dhiyā́vasuḥ ॥ <br>
+            </p>
+            <p>
+                codayitrī́ sūnŕ̥tānāṃ cétantī sumatīnã́m । <br>
+                yajñáṃ dadhe sárasvatī ॥ <br>
+            </p>
+            <p>
+                mahó árṇaḥ sárasvatī prá cetayati ketúnā । <br>
+                dhíyo víśvā ví rājati ॥ <br>
+            </p>
+            
     <hr>
     </div>
 </body>
