--- a/rgveda.html
+++ b/rgveda.html
@@ -228,6 +228,49 @@
                 mā́ no mártā abhí druhan tanū́nām indra girvaṇaḥ । <br>
                 ī́śāno yavayā vadhám ॥ <br>
             </p>
+    <hr>
+            <!-- Book 1, Hymn 6 -->
+            <h2>Book 1, Hymn 6</h2>
+            <p>
+                yuñjánti bradhnám aruṣáṃ cárantam pári tasthúṣaḥ । <br>
+                rócante rocanā́ diví ॥ <br>
+            </p>
+            <p>
+                yuñjánti asya kā́miyā hárī vípakṣasā ráthe । <br>
+                śóṇā dhr̥ṣṇū́ nr̥váhasā ॥ <br>
+            </p>
+            <p>
+                ketúṃ kr̥ṇvánn aketáve péśo maryā apeśáse । <br>
+                sám uṣádbhir ajāyathāḥ ॥ <br>
+            </p>
+            <p>
+                ã́d áha svadhā́m ánu púnar garbhatvám eriré । <br>
+                dádhānā nā́ma yajñíyam ॥ <br>
+            </p>
+            <p>
+                vīḷú cid ārujatnúbhir gúhā cid indra váhnibhiḥ । <br>
+                ávinda usríyā ánu ॥ <br>
+            </p>
+            <p>
+                devayánto yáthā matím áchā vidádvasuṃ gíraḥ । <br>
+                mahā́m anūṣata śrutám ॥ <br>
+            </p>
+            <p>
+                índreṇa sáṃ hí dŕ̥kṣase saṃjagmānó ábibhyuṣā । <br>
+                mandū́ samānávarcasā ॥ <br>
+            </p>
+            <p>
+                anavadyaír abhídyubhir makháḥ sáhasvad arcati । <br>
+                gaṇaír índrasya kā́miyaiḥ ॥ <br>
+            </p>
+            <p>
+                átaḥ parijman ā́ gahi divó vā rocanā́d ádhi । <br>
+                sám asminn r̥ñjate gíraḥ ॥ <br>
+            </p>
+            <p>
+                itó vā sātím ī́mahe divó vā pā́rthivād ádhi । <br>
+                índram mahó vā rájasaḥ ॥ <br>
+            </p>
             
             
     </div>
