--- a/rgveda.html
+++ b/rgveda.html
@@ -271,6 +271,49 @@
                 itó vā sātím ī́mahe divó vā pā́rthivād ádhi । <br>
                 índram mahó vā rájasaḥ ॥ <br>
             </p>
+    <hr>
+            <!-- Book 1, Hymn 7 -->
+            <h2>Book 1, Hymn 7</h2>
+            <p>
+                índram íd gāthíno br̥hád índram arkébhir arkíṇaḥ । <br>
+                índraṃ vā́ṇīr anūṣata ॥ <br>
+            </p>
+            <p>
+                índra íd dháriyoḥ sácā sámmiśla ā́ vacoyújā । <br>
+                índro vajrī́ hiraṇyáyaḥ ॥ <br>
+            </p>
+            <p>
+                índro dīrghā́ya cákṣasa ā́ sū́ryaṃ rohayad diví । <br>
+                ví góbhir ádrim airayat ॥ <br>
+            </p>
+            <p>
+                índra vā́jeṣu no ava sahásrapradhaneṣu ca । <br>
+                ugrá ugrā́bhir ūtíbhiḥ ॥ <br>
+            </p>
+            <p>
+                índraṃ vayám mahādhaná índram árbhe havāmahe । <br>
+                yújaṃ vr̥tréṣu vajríṇam ॥ <br>
+            </p>
+            <p>
+                sá no vr̥ṣann amúṃ carúṃ sátrādāvann ápā vr̥dhi । <br>
+                asmábhyam ápratiṣkutaḥ ॥ <br>
+            </p>
+            <p>
+                tuñjé-tuñje yá úttare stómā índrasya vajríṇaḥ । <br>
+                ná vindhe asya suṣṭutím ॥ <br>
+            </p>
+            <p>
+                vŕ̥ṣā yūthéva váṃsagaḥ kr̥ṣṭī́r iyarti ójasā । <br>
+                ī́śāno ápratiṣkutaḥ ॥ <br>
+            </p>
+            <p>
+                yá ékaś carṣaṇīnã́ṃ vásūnãm irajyáti । <br>
+                índraḥ páñca kṣitīnã́m ॥ <br>
+            </p>
+            <p>
+                índraṃ vo viśvátas pári hávāmahe jánebhiyaḥ । <br>
+                asmā́kam astu kévalaḥ ॥ <br>
+            </p>
             
             
     </div>
