--- a/rgveda.html
+++ b/rgveda.html
@@ -314,7 +314,51 @@
                 índraṃ vo viśvátas pári hávāmahe jánebhiyaḥ । <br>
                 asmā́kam astu kévalaḥ ॥ <br>
             </p>
-            
+    <hr>
+                <!-- Book 1, Hymn 8 -->
+                <h2>Book 1, Hymn 8</h2>
+                <p>
+                    ā́ indra sānasíṃ rayíṃ sajítvānaṃ sadāsáham । <br>
+                    várṣiṣṭham ūtáye bhara ॥ <br>
+                </p>
+                <p>
+                    ní yéna muṣṭihatyáyā ní vr̥trā́ ruṇádhāmahai । <br>
+                    tuvótāso ní árvatā ॥ <br>
+                </p>
+                <p>
+                    índra tvótāsa ā́ vayáṃ vájraṃ ghanā́ dadīmahi । <br>
+                    jáyema sáṃ yudhí spŕ̥dhaḥ ॥ <br>
+                </p>
+                <p>
+                    vayáṃ śū́rebhir ástr̥bhir índra tváyā yujā́ vayám । <br>
+                    sāsahyā́ma pr̥tanyatáḥ ॥ <br>
+                </p>
+                <p>
+                    mahā́m̐ índraḥ paráś ca nú mahitvám astu vajríṇe । <br>
+                    diyaúr ná prathinā́ śávaḥ ॥ <br>
+                </p>
+                <p>
+                    samohé vā yá ā́śata náras tokásya sánitau । <br>
+                    víprāso vā dhiyāyávaḥ ॥ <br>
+                </p>
+                <p>
+                    yáḥ kukṣíḥ somapā́tamaḥ samudrá iva pínvate । <br>
+                    urvī́r ā́po ná kākúdaḥ ॥ <br>
+                </p>
+                <p>
+                    evā́ hí asya sūnŕ̥tā virapśī́ gómatī mahī́ । <br>
+                    pakvā́ śā́khā ná dāśúṣe ॥ <br>
+                </p>
+                <p>
+                    evā́ hí te víbhūtaya ūtáya indra mā́vate । <br>
+                    sadyáś cit sánti dāśúṣe ॥ <br>
+                </p>
+                <p>
+                    evā́ hí asya kā́miyā stóma uktháṃ ca śáṃsiyā । <br>
+                    índrāya sómapītaye ॥ <br>
+                </p>
+    <hr>
+            <p>
             
     </div>
 </body>
