--- a/rgveda.html
+++ b/rgveda.html
@@ -315,51 +315,144 @@
                 asmā́kam astu kévalaḥ ॥ <br>
             </p>
     <hr>
-                <!-- Book 1, Hymn 8 -->
-                <h2>Book 1, Hymn 8</h2>
-                <p>
-                    ā́ indra sānasíṃ rayíṃ sajítvānaṃ sadāsáham । <br>
-                    várṣiṣṭham ūtáye bhara ॥ <br>
-                </p>
-                <p>
-                    ní yéna muṣṭihatyáyā ní vr̥trā́ ruṇádhāmahai । <br>
-                    tuvótāso ní árvatā ॥ <br>
-                </p>
-                <p>
-                    índra tvótāsa ā́ vayáṃ vájraṃ ghanā́ dadīmahi । <br>
-                    jáyema sáṃ yudhí spŕ̥dhaḥ ॥ <br>
-                </p>
-                <p>
-                    vayáṃ śū́rebhir ástr̥bhir índra tváyā yujā́ vayám । <br>
-                    sāsahyā́ma pr̥tanyatáḥ ॥ <br>
-                </p>
-                <p>
-                    mahā́m̐ índraḥ paráś ca nú mahitvám astu vajríṇe । <br>
-                    diyaúr ná prathinā́ śávaḥ ॥ <br>
-                </p>
-                <p>
-                    samohé vā yá ā́śata náras tokásya sánitau । <br>
-                    víprāso vā dhiyāyávaḥ ॥ <br>
-                </p>
-                <p>
-                    yáḥ kukṣíḥ somapā́tamaḥ samudrá iva pínvate । <br>
-                    urvī́r ā́po ná kākúdaḥ ॥ <br>
-                </p>
-                <p>
-                    evā́ hí asya sūnŕ̥tā virapśī́ gómatī mahī́ । <br>
-                    pakvā́ śā́khā ná dāśúṣe ॥ <br>
-                </p>
-                <p>
-                    evā́ hí te víbhūtaya ūtáya indra mā́vate । <br>
-                    sadyáś cit sánti dāśúṣe ॥ <br>
-                </p>
-                <p>
-                    evā́ hí asya kā́miyā stóma uktháṃ ca śáṃsiyā । <br>
-                    índrāya sómapītaye ॥ <br>
-                </p>
-    <hr>
+            <!-- Book 1, Hymn 8 -->
+            <h2>Book 1, Hymn 8</h2>
             <p>
+                ā́ indra sānasíṃ rayíṃ sajítvānaṃ sadāsáham । <br>
+                várṣiṣṭham ūtáye bhara ॥ <br>
+            </p>
+            <p>
+                ní yéna muṣṭihatyáyā ní vr̥trā́ ruṇádhāmahai । <br>
+                tuvótāso ní árvatā ॥ <br>
+            </p>
+            <p>
+                índra tvótāsa ā́ vayáṃ vájraṃ ghanā́ dadīmahi । <br>
+                jáyema sáṃ yudhí spŕ̥dhaḥ ॥ <br>
+            </p>
+            <p>
+                vayáṃ śū́rebhir ástr̥bhir índra tváyā yujā́ vayám । <br>
+                sāsahyā́ma pr̥tanyatáḥ ॥ <br>
+            </p>
+            <p>
+                mahā́m̐ índraḥ paráś ca nú mahitvám astu vajríṇe । <br>
+                diyaúr ná prathinā́ śávaḥ ॥ <br>
+            </p>
+            <p>
+                samohé vā yá ā́śata náras tokásya sánitau । <br>
+                víprāso vā dhiyāyávaḥ ॥ <br>
+            </p>
+            <p>
+                yáḥ kukṣíḥ somapā́tamaḥ samudrá iva pínvate । <br>
+                urvī́r ā́po ná kākúdaḥ ॥ <br>
+            </p>
+            <p>
+                evā́ hí asya sūnŕ̥tā virapśī́ gómatī mahī́ । <br>
+                pakvā́ śā́khā ná dāśúṣe ॥ <br>
+            </p>
+            <p>
+                evā́ hí te víbhūtaya ūtáya indra mā́vate । <br>
+                sadyáś cit sánti dāśúṣe ॥ <br>
+            </p>
+            <p>
+                evā́ hí asya kā́miyā stóma uktháṃ ca śáṃsiyā । <br>
+                índrāya sómapītaye ॥ <br>
+            </p>
+    <hr>
+            <!-- Book 1, Hymn 9 -->
+            <h2>Book 1, Hymn 9</h2>
+            <p>
+                índréhi mátsi ándhaso víśvebhiḥ somapárvabhiḥ । <br>
+                mahā́m̐ abhiṣṭír ójasā ॥ <br>
+            </p>
+            <p>
+                ém enaṃ sr̥jatā suté mandím índrāya mandíne । <br>
+                cákriṃ víśvāni cákraye ॥ <br>
+            </p>
+            <p>
+                mátsvā suśipra mandíbhi stómebhir viśvacarṣaṇe । <br>
+                sácaiṣú sávaneṣu ā́ ॥ <br>
+            </p>
+            <p>
+                ásr̥gram indra te gíraḥ práti tvā́m úd ahāsata । <br>
+                ájoṣā vr̥ṣabhám pátim ॥ <br>
+            </p>
+            <p>
+                sáṃ codaya citrám arvā́g rā́dha indra váreṇiyam । <br>
+                ásad ít te vibhú prabhú ॥ <br>
+            </p>
+            <p>
+                asmā́n sú tátra codaya índra rāyé rábhasvataḥ । <br>
+                túvidyumna yáśasvataḥ ॥ <br>
+            </p>
+            <p>
+                sáṃ gómad indra vā́javad asmé pr̥thú śrávo br̥hát । <br>
+                viśvā́yur dhehi ákṣitam ॥ <br>
+            </p>
+            <p>
+                asmé dhehi śrávo br̥hád dyumnáṃ sahasrasā́tamam । <br>
+                índra tā́ rathínīr íṣaḥ ॥ <br>
+            </p>
+            <p>
+                vásor índraṃ vásupatiṃ gīrbhír gr̥ṇánta r̥gmíyam । <br>
+                hóma gántāram ūtáye ॥ <br>
+            </p>
+            <p>
+                suté-sute níokase br̥hád br̥hatá éd aríḥ । <br>
+                índrāya śūṣám arcati ॥ <br>
+            </p>
+    <hr>
+            <!-- Book 1, Hymn 10 -->
+            <h2>Book 1, Hymn 10</h2>
+            <p>
+                gā́yanti tvā gāyatríṇo árcanti arkám arkíṇaḥ । <br>
+                brahmā́ṇas tvā śatakrata úd vaṃśám iva yemire ॥ <br>
+            </p>
+            <p>
+                yát sā́noḥ sā́num ā́ruhad bhū́ri áspaṣṭa kártuvam । <br>
+                tád índro árthaṃ cetati yūthéna vr̥ṣṇír ejati ॥ <br>
+            </p>
+            <p>
+                yukṣvā́ hí keśínā hárī vŕ̥ṣaṇā kakṣiyaprã́ । <br>
+                áthā na indra somapā girā́m úpaśrutiṃ cara ॥ <br>
+            </p>
+            <p>
+                éhi stómām̐ abhí svara abhí gr̥ṇīhi ā́ ruva । <br>
+                bráhma ca no vaso sácā índra yajñáṃ ca vardhaya ॥ <br>
+            </p>
+            <p>
+                ukthám índrāya śáṃsiyaṃ várdhanam puruniṣṣídhe । <br>
+                śakró yáthā sutéṣu ṇo rāráṇat sakhiyéṣu ca ॥ <br>
+            </p>
+            <p>
+                tám ít sakhitvá īmahe táṃ rāyé táṃ suvī́riye । <br>
+                sá śakrá utá naḥ śakad índro vásu dáyamānaḥ ॥ <br>
+            </p>
+            <p>
+                suvivŕ̥taṃ sunirájam índra tvā́dātam íd yáśaḥ । <br>
+                gávām ápa vrajáṃ vr̥dhi kr̥ṇuṣvá rā́dho adrivaḥ ॥ <br>
+            </p>
+            <p>
+                nahí tvā ródasī ubhé r̥ghāyámāṇam ínvataḥ । <br>
+                jéṣaḥ súvarvatīr apáḥ sáṃ gā́ asmábhya dhūnuhi ॥ <br>
+            </p>
+            <p>
+                ā́śrutkarṇa śrudhī́ hávaṃ nū́ cid dadhiṣva me gíraḥ । <br>
+                índra stómam imám máma kr̥ṣvá́ yujáś cid ántaram ॥ <br>
+            </p>
+            <p>
+                vidmā́ hí tvā vŕ̥ṣantamaṃ vā́jeṣu havanaśrútam । <br>
+                vŕ̥ṣantamasya hūmaha ūtíṃ sahasrasā́tamām ॥ <br>
+            </p>
+            <p>
+                ā́ tū́ na indra kauśika mandasānáḥ sutám piba । <br>
+                návyam ā́yuḥ prá sū́ tira kr̥dhī́ sahasrasā́m ŕ̥ṣim ॥ <br>
+            </p>
+            <p>
+                pári tvā girvaṇo gíra imā́ bhavantu viśvátaḥ । <br>
+                vr̥ddhā́yum ánu vŕ̥ddhayo júṣṭā bhavantu júṣṭayaḥ ॥ <br>
+            </p>
             
+    <hr>
     </div>
 </body>
 </html>
