--- a/rgveda.html
+++ b/rgveda.html
@@ -451,7 +451,144 @@
                 pári tvā girvaṇo gíra imā́ bhavantu viśvátaḥ । <br>
                 vr̥ddhā́yum ánu vŕ̥ddhayo júṣṭā bhavantu júṣṭayaḥ ॥ <br>
             </p>
+    <hr>
+            <!-- Book 1, Hymn 11 -->
+            <h2>Book 1, Hymn 11</h2>
+            <p>
+                índraṃ víśvā avīvr̥dhan samudrávyacasaṃ gíraḥ । <br>
+                rathī́tamaṃ rathī́nãṃ vā́jānāṃ sátpatim pátim ॥ <br>
+            </p>
+            <p>
+                sakhyé ta indra vājíno mā́ bhema śavasas pate । <br>
+                tuvā́m abhí prá ṇonumo jétāram áparājitam ॥ <br>
+            </p>
+            <p>
+                pūrvī́r índrasya rātáyo ná ví dasyanti ūtáyaḥ । <br>
+                yádī vā́jasya gómata stotŕ̥bhyo máṃhate maghám ॥ <br>
+            </p>
+            <p>
+                purā́m bhindúr yúvā kavír ámitaujā ajāyata । <br>
+                índro víśvasya kármaṇo dhartā́ vajrī́ puruṣṭutáḥ ॥ <br>
+            </p>
+            <p>
+                tuváṃ valásya gómato ápāvar adrivo bílam । <br>
+                tuvā́ṃ devā́ ábibhyuṣas tujyámānāsa āviṣuḥ ॥ <br>
+            </p>
+            <p>
+                távāháṃ śūra rātíbhiḥ práty āyaṃ síndhum āvádan । <br>
+                úpātiṣṭhanta girvaṇo vidúṣ ṭe tásya kārávaḥ ॥ <br>
+            </p>
+            <p>
+                māyā́bhir indra māyínaṃ tuváṃ śúṣṇam ávātiraḥ । <br>
+                vidúṣ ṭe tásya médhirās téṣāṃ śrávāṃsi út tira ॥ <br>
+            </p>
+            <p>
+                índram ī́śānam ójasā abhí stómā anūṣata । <br>
+                sahásraṃ yásya rātáya utá vā sánti bhū́yasīḥ ॥ <br>
+            </p>
             
+    <hr>
+            <!-- Book 1, Hymn 12 -->
+            <h2>Book 1, Hymn 12</h2>
+            <p>
+                agníṃ dūtáṃ vr̥ṇīmahe hótāraṃ viśvávedasam । <br>
+                asyá yajñásya sukrátum ॥ <br>
+            </p>
+            <p>
+                agním-agniṃ hávīmabhiḥ sádā havanta viśpátim । <br>
+                havyavā́́ham purupriyám ॥ <br>
+            </p>
+            <p>
+                ágne devā́m̐ ihā́ vaha jajñānó vr̥ktábarhiṣe । <br>
+                ási hótā na ī́ḍiyaḥ ॥ <br>
+            </p>
+            <p>
+                tā́m̐ uśató ví bodhaya yád agne yā́si dūtíyam । <br>
+                devaír ā́ satsi barhíṣi ॥ <br>
+            </p>
+            <p>
+                ghŕ̥tāhavana dīdivaḥ práti ṣma ríṣato daha । <br>
+                ágne tuváṃ rakṣasvínaḥ ॥ <br>
+            </p>
+            <p>
+                agnínāgníḥ sám idhyate kavír gr̥hápatir yúvā । <br>
+                havyavā́ḍ juhúvāsiyaḥ ॥ <br>
+            </p>
+            <p>
+                kavím agním úpa stuhi satyádharmāṇam adhvaré । <br>
+                devám amīvacā́tanam ॥ <br>
+            </p>
+            <p>
+                yás tvā́m agne havíṣpatir dūtáṃ deva saparyáti । <br>
+                tásya sma prāvitā́ bhava ॥ <br>
+            </p>
+            <p>
+                yó agníṃ devávītaye havíṣmām̐ āvívāsati । <br>
+                tásmai pavāka+ mr̥̄ḷaya+ ॥ <br>
+            </p>
+            <p>
+                sá naḥ pavāka+ dīdivo ágne devā́m̐ ihā́ vaha । <br>
+                úpa yajñáṃ havíś ca naḥ ॥ <br>
+            </p>
+            <p>
+                sá na stávāna ā́ bhara gāyatréṇa návīyasā । <br>
+                rayíṃ vīrávatīm íṣam ॥ <br>
+            </p>
+            <p>
+                ágne śukréṇa śocíṣā víśvābhir deváhūtibhiḥ । <br>
+                imáṃ stómaṃ juṣasva naḥ ॥ <br>
+            </p>
+    <hr>
+            <!-- Book 1, Hymn 13 -->
+            <h2>Book 1, Hymn 13</h2>
+            <p>
+                súsamiddho na ā́ vaha devā́m̐ agne havíṣmate । <br>
+                hótaḥ pavāka+ yákṣi ca ॥ <br>
+            </p>
+            <p>
+                mádhumantaṃ tanūnapād yajñáṃ devéṣu naḥ kave । <br>
+                adyā́ kr̥ṇuhi vītáye ॥ <br>
+            </p>
+            <p>
+                nárāśáṃsam ihá priyám asmín yajñá úpa hvaye । <br>
+                mádhujihvaṃ haviṣkŕ̥tam ॥ <br>
+            </p>
+            <p>
+                ágne sukhátame ráthe devā́m̐ īḷitá ā́ vaha । <br>
+                ási hótā mánurhitaḥ ॥ <br>
+            </p>
+            <p>
+                str̥ṇītá barhír ānuṣág ghr̥tápr̥ṣṭham manīṣiṇaḥ । <br>
+                yátrāmŕ̥tasya cákṣaṇam ॥ <br>
+            </p>
+            <p>
+                ví śrayantām r̥tāvŕ̥dho dvā́ro devī́r asaścátaḥ । <br>
+                adyā́ nūnáṃ ca yáṣṭave ॥ <br>
+            </p>
+            <p>
+                náktoṣā́sā supéśasā asmín yajñá úpa hvaye । <br>
+                idáṃ no barhír āsáde ॥ <br>
+            </p>
+            <p>
+                tā́ sujihvā́ úpa hvaye hótārā daíviyā kavī́ । <br>
+                yajñáṃ no yakṣatām imám ॥ <br>
+            </p>
+            <p>
+                íḷā sárasvatī mahī́ tisró devī́r mayobhúvaḥ । <br>
+                barhíḥ sīdantu asrídhaḥ ॥ <br>
+            </p>
+            <p>
+                ihá tváṣṭāram agriyáṃ viśvárūpam úpa hvaye । <br>
+                asmā́kam astu kévalaḥ ॥ <br>
+            </p>
+            <p>
+                áva sr̥jā vanaspate déva devébhiyo havíḥ । <br>
+                prá dātúr astu cétanam ॥ <br>
+            </p>
+            <p>
+                svā́hā yajñáṃ kr̥ṇotana índrāya yájvano gr̥hé । <br>
+                tátra devā́m̐ úpa hvaye ॥ <br>
+            </p>
     <hr>
     </div>
 </body>
