--- a/vedas/rgveda.html
+++ b/vedas/rgveda.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ṛgveda</title>
-    <link rel="stylesheet" href="rgveda.css"> 
+    <link rel="stylesheet" href="vedas.css"> 
     <link rel="icon" type="image/png" href="media/swastika.png">
 </head>
 <body>
