--- a/vedas/rgveda.html
+++ b/vedas/rgveda.html
@@ -12,7 +12,7 @@
         <p class="subtitle"> by loka </p>
     <hr>
     <div>
-        <!-- BOOK 1 HYMN 1-->
+        <!-- BOOK 1 hymn 1-->
         <h2>Book 1, Hymn 1</h2>
             <p>
                 agním īḻe puróhitam yajñásya devám ṛtvíjam । <br>
