--- a/vedas/rgveda.html
+++ b/vedas/rgveda.html
@@ -22,8 +22,9 @@
     <p class="subtitle">by loka</p>
     <hr />
     <div>
+      <div id="books"></div>
       <div id="hymns"></div>
-      <!-- BOOK 1 hymn 1-->
+
     </div>
   </body>
 </html>
