finished ṛgveda compilation :D

--- a/vedas/rgveda.html
+++ b/vedas/rgveda.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="vedas.css" />
     <link rel="icon" type="image/png" href="media/swastika.png" />
   </head>
-  <template id="hymn-template">
+
+  <template id="hymn-template"> 
     <div class="hymn">
       <h2 class="hymn-heading"></h2>
       <p class="hymn-verse">
@@ -15,12 +16,14 @@
       </p>
     </div>
   </template>
+
   <body>
     <script type="text/javascript" src="index.js"></script>
-    <!-- Title -->
+
+    <!-- title -->
     <h1 class="heading">Ṛgveda</h1>
     <p class="subtitle">by loka</p>
-    <hr />
+    <hr>
     <div>
       <div id="books"></div>
       <div id="hymns"></div>
