--- a/vedas/book 1.html
+++ b/vedas/book 1.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>ṛgveda</title>
-    <link rel="stylesheet" href="vedas.css" />
-    <link rel="icon" type="image/png" href="media/swastika.png" />
+    <link rel="stylesheet" href="rgveda.css" />
+    <link rel="icon" type="image/png" href="media/favicon.png" />
   </head>
 
   <template id="hymn-template"> 
