--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>vedas</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="image/png" href="media/swastika.png">
-    <!-- Background music (if desired) -->
-    <audio id="background-music" src="media/song.mp3" type="audio/mpeg" controls loop autoplay></audio>
+  <head>
+    <meta charset="UTF-8" />
+    <title>ṛgveda</title>
+    <link rel="stylesheet" href="rgveda.css" />
+    <link rel="icon" type="image/png" href="media/favicon.png" />
+  </head>
 
-</head>
-<body>
-    <h1>Vedas</h1>
-    <img src="media/swastika.png" alt="Swastika" class="center-image">
-    <div class="nav-links">
-        <a href="vedas/rgveda.html">Ṛgveda //</a> 
-        <a href="samaveda.html">Sāmaveda //</a>
-        <a href="yajurveda.html">Yajurveda //</a>
-        <a href="atharvaveda.html">Atharvaveda //</a>
+  <body>
+    <script type="text/javascript" src="index.js"></script>
+
+    <!-- title -->
+    <h1 class="heading">Ṛgveda</h1>
+    <p class="subtitle">by loka</p>
+    <hr>
+    <div>
+      <div id="books"></div>
+      <div id="hymns"></div>
+        
     </div>
-</body>
+  </body>
 </html>
