Index js works with books

--- a/vedas/pages/book7.html
+++ b/vedas/pages/book7.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>ṛgveda</title>
-    <link rel="stylesheet" href="rgveda.css" />
-    <link rel="icon" type="image/png" href="media/favicon.png" />
+    <title>ṛgveda | Book 7</title>
+    <link rel="stylesheet" href="vedas.css" />
+    <link rel="icon" type="image/png" href="media/swastika.png" />
   </head>
 
-  <template id="hymn-template"> 
+  <template id="hymn-template">
     <div class="hymn">
       <h2 class="hymn-heading"></h2>
       <p class="hymn-verse">
@@ -23,11 +23,10 @@
     <!-- title -->
     <h1 class="heading">Ṛgveda</h1>
     <p class="subtitle">by loka</p>
-    <hr>
+    <hr />
     <div>
       <div id="books"></div>
       <div id="hymns"></div>
-
     </div>
   </body>
 </html>
