--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>ṛgveda</title>
-    <link rel="stylesheet" href="rgveda.css" />
-    <link rel="icon" type="image/png" href="media/favicon.png" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <title>ṛgveda</title>
+  <link rel="stylesheet" href="rgveda.css" />
+  <link rel="icon" type="image/png" href="media/favicon.png" />
+</head>
+<body>
+  <script type="text/javascript" src="index.js"></script>
 
-  <body>
-    <script type="text/javascript" src="index.js"></script>
-
-    <!-- title -->
-    <h1 class="heading">Ṛgveda</h1>
-    <p class="subtitle">by loka</p>
-    <hr>
-    <div>
-      <div id="books"></div>
-      <div id="hymns"></div>
-        
+  <!-- title -->
+  <h1 class="heading">Ṛgveda</h1>
+  <p class="subtitle">by loka</p>
+  <hr>
+  <div>
+    <!-- Books -->
+    <div id="books">
+      <!-- Creating 10 books -->
+      <div><a href="pages/book1.html">Book 1</a></div>
+      <div><a href="vedas/book2.html">Book 2</a></div>
+      <div><a href="vedas/book3.html">Book 3</a></div>
+      <div><a href="vedas/book4.html">Book 4</a></div>
+      <div><a href="vedas/book5.html">Book 5</a></div>
+      <div><a href="vedas/book6.html">Book 6</a></div>
+      <div><a href="vedas/book7.html">Book 7</a></div>
+      <div><a href="vedas/book8.html">Book 8</a></div>
+      <div><a href="vedas/book9.html">Book 9</a></div>
+      <div><a href="vedas/book10.html">Book 10</a></div>
     </div>
-  </body>
+    <div id="hymns"></div>
+  </div>
+</body>
 </html>
