--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <div id="books">
       <!-- Creating 10 books -->
       <div><a href="pages/book1.html">Book 1</a></div>
-      <div><a href="vedas/book2.html">Book 2</a></div>
-      <div><a href="vedas/book3.html">Book 3</a></div>
-      <div><a href="vedas/book4.html">Book 4</a></div>
-      <div><a href="vedas/book5.html">Book 5</a></div>
-      <div><a href="vedas/book6.html">Book 6</a></div>
-      <div><a href="vedas/book7.html">Book 7</a></div>
-      <div><a href="vedas/book8.html">Book 8</a></div>
-      <div><a href="vedas/book9.html">Book 9</a></div>
-      <div><a href="vedas/book10.html">Book 10</a></div>
+      <div><a href="pages/book2.html">Book 2</a></div>
+      <div><a href="pages/book3.html">Book 3</a></div>
+      <div><a href="pages/book4.html">Book 4</a></div>
+      <div><a href="pages/book5.html">Book 5</a></div>
+      <div><a href="pages/book6.html">Book 6</a></div>
+      <div><a href="pages/book7.html">Book 7</a></div>
+      <div><a href="pages/book8.html">Book 8</a></div>
+      <div><a href="pages/book9.html">Book 9</a></div>
+      <div><a href="pages/book10.html">Book 10</a></div>
     </div>
     <div id="hymns"></div>
   </div>
