--- a/pages/book1.html
+++ b/pages/book1.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>ṛgveda | Book 2</title>
-    <link rel="stylesheet" href="vedas.css" />
+    <title>ṛgveda | Book 1</title>
+    <link rel="stylesheet" href="../rgveda.css" />
     <link rel="icon" type="image/png" href="media/swastika.png" />
   </head>
 
@@ -21,8 +21,8 @@
     <script type="text/javascript" src="index.js"></script>
 
     <!-- title -->
-    <h1 class="heading">Ṛgveda</h1>
-    <p class="subtitle">by loka</p>
+    <h1 class="heading">Ṛgveda </h1>
+    <p class="subtitle">book 1</p>
     <hr />
     <div>
       <div id="books"></div>
