--- a/pages/book8.html
+++ b/pages/book8.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>ṛgveda | Book 4</title>
-    <link rel="stylesheet" href="vedas.css" />
+    <title>ṛgveda | Book 8</title>
+    <link rel="stylesheet" href="../rgveda.css" />
     <link rel="icon" type="image/png" href="media/swastika.png" />
   </head>
 
@@ -22,7 +22,7 @@
 
     <!-- title -->
     <h1 class="heading">Ṛgveda</h1>
-    <p class="subtitle">by loka</p>
+    <p class="subtitle">book 8</p>
     <hr />
     <div>
       <div id="books"></div>
