--- a/pages/book9.html
+++ b/pages/book9.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>ṛgveda | Book 9</title>
-    <link rel="stylesheet" href="vedas.css" />
+    <link rel="stylesheet" href="../rgveda.css" />
     <link rel="icon" type="image/png" href="media/swastika.png" />
   </head>
 
@@ -22,7 +22,7 @@
 
     <!-- title -->
     <h1 class="heading">Ṛgveda</h1>
-    <p class="subtitle">by loka</p>
+    <p class="subtitle">book 9</p>
     <hr />
     <div>
       <div id="books"></div>
