--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>ṛgveda</title>
   <link rel="stylesheet" href="rgveda.css" />
-  <link rel="icon" type="image/png" href="media/favicon.png" />
+  <link rel="icon" type="image/png" href=".media/favicon.png" />
 </head>
 <body>
   <script type="text/javascript" src="index.js"></script>
@@ -16,19 +16,21 @@
   <div>
     <!-- Books -->
     <div id="books">
-      <!-- Creating 10 books -->
-      <div><a href="pages/book1.html">Book 1</a></div>
-      <div><a href="pages/book2.html">Book 2</a></div>
-      <div><a href="pages/book3.html">Book 3</a></div>
-      <div><a href="pages/book4.html">Book 4</a></div>
-      <div><a href="pages/book5.html">Book 5</a></div>
-      <div><a href="pages/book6.html">Book 6</a></div>
-      <div><a href="pages/book7.html">Book 7</a></div>
-      <div><a href="pages/book8.html">Book 8</a></div>
-      <div><a href="pages/book9.html">Book 9</a></div>
-      <div><a href="pages/book10.html">Book 10</a></div>
+      <div><a href="pages/book1.html">Book 1</a> - Hymns to Agni, mediator between humans and Gods</div>
+      <div><a href="pages/book2.html">Book 2</a> - Hymns to Indra, Agni, Varuṇa and Vṣṇu</div>
+      <div><a href="pages/book3.html">Book 3</a> - Hymns that explore ṛta, cosmos and creation</div>
+      <div><a href="pages/book4.html">Book 4</a> - Hymns praising Indra, Agni, Varuṇa and Mitra for upholding Dharma</div>
+      <div><a href="pages/book5.html">Book 5</a> - Hymns celebrating the beauty and abundance of Earth</div>
+      <div><a href="pages/book6.html">Book 6</a> - Hymns about sacrifice, devotion and searching for higher knowledge</div>
+      <div><a href="pages/book7.html">Book 7</a> - Hymns to Gods and philosophical reflection of truth, morality and existence</div>
+      <div><a href="pages/book8.html">Book 8</a> - Hymns to Gods, divine wisdom and cosmic order</div>
+      <div><a href="pages/book9.html">Book 9</a> - Hymns emphasising the pursuit of truth, righteousness and enlightenment</div>
+      <div><a href="pages/book10.html">Book 10</a> - Hymns dedicated invoking deities, exploring ṛta, dharma, rituals and express to divinity</div>
     </div>
-    <div id="hymns"></div>
-  </div>
+    <hr>
+      <h1> Encyclopedia </h1>
+      <list><a href="info/history.html">History</a> - History of the Vedic Aryans </list><br>
+      <list><a href="info/deities.html">Culture</a> - Culture of the Vedic Aryans </list><br>
+      <list><a href="info/deities.html">Deities</a> - List of deities within the rgveda </list><br>
 </body>
 </html>
