--- a/pages/book2.html
+++ b/pages/book2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>ṛgveda | Book 2</title>
-    <link rel="stylesheet" href="rgveda.css" />
+    <link rel="stylesheet" href="../rgveda.css" />
     <link rel="icon" type="image/png" href="media/swastika.png" />
   </head>
 
