basic mobile optimisation + foundation for each encyclopedia page

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </div>
     <hr>
       <h1> Encyclopedia </h1>
-      <list><a href="info/dictionary.html">Dictionary</a> - Dictionary of Sanskrit words </list><br>
-      <list><a href="info/deities.html">Deities</a> - List of deities within the rgveda </list><br>
+      <list><a href="info/dictionary.html">Dictionary</a> - Dictionary of sanskrit words within the Ṛgveda</list><br>
+      <list><a href="info/deities.html">Deities</a> - List of deities within the Ṛgveda </list><br>
       <list><a href="info/ancestry.html">Ancestry</a> - History of how the Vedic Aryans came to be </list><br>
       <list><a href="info/history.html">History</a> - History of the Vedic Aryans </list><br>
       <list><a href="info/culture.html">Culture</a> - Culture of the Vedic Aryans </list><br>
