--- a/pages/book9.html
+++ b/pages/book9.html
@@ -5,6 +5,7 @@
     <title>ṛgveda | Book 9</title>
     <link rel="stylesheet" href="../rgveda.css" />
     <link rel="icon" type="image/png" href="media/swastika.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <template id="hymn-template">
