--- a/info/deities.html
+++ b/info/deities.html
@@ -15,7 +15,23 @@
   <p class="subtitle">the deities within the ṛgveda</p>
   <hr>
   <div>
-    <!-- Books -->
-
+    <!-- Major Deities -->
+    <h1 class="heading">Major Deities</h1>
+    <strong>Indra</strong> - King of Gods, Emperor of Svarga, God of rain, thunder and war<br>
+    <strong>Agni</strong> - God of fires and sacrifices <br>
+    <strong>Varuṇa</strong> - God of cosmic order, associated with water <br>
+    <strong>Sūrya</strong> - God of the Sun, symbolizing light and vitality <br>
+    <strong>Mitrá</strong> -  God of friendships and contracts<br>
+    <strong>Uṣas</strong> - Goddess of dawn <br>
+    <strong>Savitṛ</strong> - Solar deity, invoked for protection <br>
+    <strong>Vāyu</strong> - God of wind <br>
+    <strong>Sarasvatī</strong> - God of knowledge and wisdom <br>
+    <strong>Pūṣan</strong> - Solar deity responsible for marriages and meetings <br>
+    <strong>Dyauṣ Pitṛ</strong> - Sky Father deity, Father of Indra and Agni <br>
+    <strong>Pṛthivī Mata</strong> - Earth Mother deity, Mother of Indra and Agni <br>
+    <strong>Rudra</strong> - God of storms and archery  <br>
+    <strong>Viṣṇu</strong> - Solar deity of preservation <br>
+    <strong>Yama</strong> - Deity of death, son of Surya <br>
+    <strong>Parjánya</strong> -  <br>
 </body>
 </html>
