fixes to parjanya

--- a/info/deities.html
+++ b/info/deities.html
@@ -32,6 +32,6 @@
     <strong>Rudra</strong> - God of storms and archery  <br>
     <strong>Viṣṇu</strong> - Solar deity of preservation <br>
     <strong>Yama</strong> - Deity of death, son of Surya <br>
-    <strong>Parjánya</strong> - God of , apithet of Indra <br>
+    <strong>Parjánya</strong> - God of rain, epithet of Indra <br>
 </body>
 </html>
