ancestry page completed

--- a/info/ancestry.html
+++ b/info/ancestry.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>ancestry</title>
+  <title>Ancestry</title>
   <link rel="stylesheet" href="../rgveda.css" />
   <link rel="icon" type="image/png" href="../media/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,10 +12,39 @@
 
   <!-- title -->
   <h1 class="heading">Ancestry</h1>
-  <p class="subtitle">the ancestry of the vedic aryans</p>
+  <p class="subtitle">The Ancestry of the Vedic Aryans</p>
   <hr>
+
+  <!-- Main content -->
   <div>
-    <!-- Books -->
+
+    <!-- Section: Yamnaya Culture -->
+    <h2>Yamnaya Culture <small class="subtitle">| 3500 to 2600 BCE</small></h2>
+    <p>A group originating in the Pontic-Caspian steppe, within present-day Ukraine and southern Russia.</p>
+    <p>The root culture of modern Europeans, Iranians, and North Indians, they were polytheistic semi-nomadic pastoralist warriors who rode chariots. The Yamnaya migrated west into Europe and eastwards to Central Asia.</p>
+
+    <!-- Section: Afanasievo Culture -->
+    <h2>Afanasievo Culture <small class="subtitle">| 3300 to 2600 BCE</small></h2>
+    <p>Direct descendants of the Yamnaya who migrated eastwards to the Altai-Sayan region within Central Asia.</p>
+
+    <!-- Section: Sintashta Culture -->
+    <h2>Sintashta Culture <small class="subtitle">| 2100 to 1800 BCE</small></h2>
+    <p>Descent from Afanasievo groups that split off into the southern Urals and northern steppes of Central Asia.</p>
+
+    <!-- Section: Andronovo Culture -->
+    <h2>Andronovo Culture <small class="subtitle">| 2000 to 900 BCE</small></h2>
+    <p>Emerged from Sintashta groups within Central Asia, including parts of modern-day Kazakhstan, Russia, and western Siberia.</p>
+
+    <!-- Section: Proto Aryans -->
+    <h2>Proto Aryans <small class="subtitle">| 2000 to 1500 BCE</small></h2>
+    <p>An Andronovo descent group that migrated into Central and South Asia, forming the root of Indo-Iranian languages and cultures</p>
+    <p>The Aryans then split westwards to conquer the Iranian plateau and develop modern Iranian cultures and also split eastwards to conquer the northern Indian Subcontinent.</p>
+
+    <!-- Section: Vedic Aryans -->
+    <h2>Vedic Aryans <small class="subtitle">| 1500 to 500 BCE</small></h2>
+    <p>After separating from the other Aryans, a separate and distinct culture was formed within Northern India with a well-established culture, language, and religions.</p>
+
+  </div>
 
 </body>
 </html>
